--- a/Free_writing.html
+++ b/Free_writing.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset = "utf-8">
-  <title> 나만의 블로그 </title>
+  <title> Book Review </title>
   <link rel = "stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1> 나만의 블로그 </h1>
+  <h1> Book Review </h1>
   <div id = image>
   <image src = "sun.png" width = "20">
   <image src = "home.png" width = "20">
@@ -26,7 +26,7 @@
     </span id = third>
   </div class = subtitle>
 
-  <h2> 전체 글 </h2>
+  <h2> Book Review </h2>
 
 </body>
 </html>
